Prevent SoundCloud and YouTube widget from overflowing

--- a/app/javascript/styles/sc_widget.scss
+++ b/app/javascript/styles/sc_widget.scss
@@ -1,3 +1,7 @@
 .status-sc-widget-wrapper {
   margin-top: 10px;
+
+  .status-sc-widget {
+    max-width: 100%;
+  }
 }
